Closed
Bug 355332
Opened 13 years ago
Closed 13 years ago
Feed sniffing ignores content-disposition, displays "attachment" in the browser
Categories
(Firefox Graveyard :: RSS Discovery and Preview, defect, major)
Firefox Graveyard
RSS Discovery and Preview
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: philor, Assigned: sayrer)
References
()
Details
(Keywords: fixed1.8.1.1, relnote)
Attachments
(1 file)
5.57 KB,
patch
|
vlad
:
review+
beltzner
:
approval1.8.1-
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
Discovered by sending a feed to myself as an attachment, and clicking GMail's "download" link, only to have the feed displayed in the browser. STR: 1. Email yourself a feed attachment and view it through webmail, or go to http://philringnalda.com/mtests/disposition-attach/ (which is m.o/news.rdf served with "Content-type: text/xml" and "Content-disposition: attachment; filename="news.rdf"") 2. Notice that you're seeing it in the browser.
Assignee | ||
Updated•13 years ago
|
Assignee: nobody → sayrer
Comment 1•13 years ago
|
||
ENV: Windows / Firefox 2 rc2 Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1) Gecko/2006100319 Firefox/2.0 This causes problems for WordPress users trying to export (backup) their blog http://trac.wordpress.org/ticket/3225 keywords: content disposition
Reporter | ||
Updated•13 years ago
|
Flags: blocking1.8.1.1?
Assignee | ||
Comment 2•13 years ago
|
||
Assignee | ||
Updated•13 years ago
|
Attachment #241766 -
Flags: review?(vladimir)
Comment on attachment 241766 [details] [diff] [review] check for the disposition header after detecting a feed I guess that looks ok, though please file a bug on factoring out the common usage.
Attachment #241766 -
Flags: review?(vladimir) → review+
Assignee | ||
Comment 4•13 years ago
|
||
Filed Bug 356086.
Assignee | ||
Comment 5•13 years ago
|
||
/cvsroot/mozilla/browser/components/feeds/src/Makefile.in,v <-- Makefile.in new revision: 1.7; previous revision: 1.6 done Checking in nsFeedSniffer.cpp; /cvsroot/mozilla/browser/components/feeds/src/nsFeedSniffer.cpp,v <-- nsFeedSniffer.cpp new revision: 1.11; previous revision: 1.10 done
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 6•13 years ago
|
||
Comment on attachment 241766 [details] [diff] [review] check for the disposition header after detecting a feed maybe we could slip this in for RC3... a regression for web mail attachments and such.
Attachment #241766 -
Flags: approval1.8.1?
Flags: blocking-firefox2?
Comment 7•13 years ago
|
||
Its really too late for this for 1.8.1, we should definitely get it into the 1.8.1.1 patchset. Right click, Save As works for now, we should release note this for Fx2, and get it into 2.0.0.1 as soon as the branch reopens.
Flags: blocking1.8.1.1?
Flags: blocking1.8.1.1+
Flags: blocking-firefox2?
Flags: blocking-firefox2-
Keywords: relnote
Comment 8•13 years ago
|
||
Comment on attachment 241766 [details] [diff] [review] check for the disposition header after detecting a feed Forwarding nomination to 1.8.1.1 ...
Attachment #241766 -
Flags: approval1.8.1?
Attachment #241766 -
Flags: approval1.8.1.1?
Attachment #241766 -
Flags: approval1.8.1-
Comment 9•13 years ago
|
||
Comment on attachment 241766 [details] [diff] [review] check for the disposition header after detecting a feed approved for 1.8 branch, a=dveditz for drivers
Attachment #241766 -
Flags: approval1.8.1.1? → approval1.8.1.1+
Updated•13 years ago
|
Whiteboard: [checkin needed (1.8 branch)]
Assignee | ||
Comment 10•13 years ago
|
||
Checking in Makefile.in; /cvsroot/mozilla/browser/components/feeds/src/Makefile.in,v <-- Makefile.in new revision: 1.1.2.4; previous revision: 1.1.2.3 done Checking in nsFeedSniffer.cpp; /cvsroot/mozilla/browser/components/feeds/src/nsFeedSniffer.cpp,v <-- nsFeedSniffer.cpp new revision: 1.1.2.8; previous revision: 1.1.2.7 done
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
Updated•13 years ago
|
Keywords: fixed1.8.1 → fixed1.8.1.1
Assignee | ||
Comment 11•13 years ago
|
||
QA: http://philringnalda.com/mtests/disposition-attach/ should popup a save dialog, not show the feed preview
Updated•Last year
|
Product: Firefox → Firefox Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•