bug 355332. Feed sniffing ignores content-disposition, displays 'attachment' in the browser. r=vlad